compile_tests/expected/operators.stderr
error: unsupported unary operator
 --> compile_tests/src/operators.rs:8:37
  |
8 |     static UNSUPPORTED_UNARY: u32 = *&CONSTANT;
  |                                     ^

error: unsupported expression
 --> compile_tests/src/operators.rs:8:38
  |
8 |     static UNSUPPORTED_UNARY: u32 = *&CONSTANT;
  |                                      ^

error: unsupported binary operator
  --> compile_tests/src/operators.rs:10:47
   |
10 |     static UNSUPPORTED_BINARY: u32 = CONSTANT & CONSTANT;
   |                                               ^

error[E0277]: the trait bound `u32: GpuNot` is not satisfied
 --> compile_tests/src/operators.rs:7:34
  |
7 |     static INVALID_UNARY: u32 = !CONSTANT;
  |                                 -^^^^^^^^ the trait `GpuNot` is not implemented for `u32`
  |                                 |
  |                                 required by a bound introduced by this call
  |
  = help: the trait `GpuNot` is implemented for `bool`

error[E0277]: the trait bound `u32: GpuNot` is not satisfied
 --> compile_tests/src/operators.rs:7:33
  |
7 |     static INVALID_UNARY: u32 = !CONSTANT;
  |                                 ^ the trait `GpuNot` is not implemented for `u32`
  |
  = help: the trait `GpuNot` is implemented for `bool`

error[E0277]: the trait bound `u32: GpuAnd<_>` is not satisfied
 --> compile_tests/src/operators.rs:9:46
  |
9 |     static INVALID_BINARY: u32 = CONSTANT && CONSTANT;
  |                                  --------    ^^^^^^^^ the trait `GpuAnd<_>` is not implemented for `u32`
  |                                  |
  |                                  required by a bound introduced by this call
  |
  = help: the trait `GpuAnd<bool>` is implemented for `bool`

error[E0277]: the trait bound `u32: GpuAnd<u32>` is not satisfied
 --> compile_tests/src/operators.rs:9:34
  |
9 |     static INVALID_BINARY: u32 = CONSTANT && CONSTANT;
  |                                  ^^^^^^^^ the trait `GpuAnd<u32>` is not implemented for `u32`
  |
  = help: the trait `GpuAnd<bool>` is implemented for `bool`

error[E0369]: no implementation for `Gpu<u32, Const> & Gpu<u32, Const>`
  --> compile_tests/src/operators.rs:10:47
   |
10 |     static UNSUPPORTED_BINARY: u32 = CONSTANT & CONSTANT;
   |                                      -------- ^ -------- Gpu<u32, Const>
   |                                      |
   |                                      Gpu<u32, Const>
   |

error[E0277]: the trait bound `u32: GpuAdd<bool>` is not satisfied
  --> compile_tests/src/operators.rs:14:31
   |
14 |         UNSUPPORTED_BINARY += true;
   |         ------------------    ^^^^ the trait `GpuAdd<bool>` is not implemented for `u32`
   |         |
   |         required by a bound introduced by this call
   |
   = help: the following other types implement trait `GpuAdd<R>`:
             `u32` implements `GpuAdd<i32>`
             `u32` implements `GpuAdd<u32>`

error[E0277]: the trait bound `u32: GpuAdd<bool>` is not satisfied
  --> compile_tests/src/operators.rs:14:9
   |
14 |         UNSUPPORTED_BINARY += true;
   |         ^^^^^^^^^^^^^^^^^^ the trait `GpuAdd<bool>` is not implemented for `u32`
   |
   = help: the following other types implement trait `GpuAdd<R>`:
             `u32` implements `GpuAdd<i32>`
             `u32` implements `GpuAdd<u32>`


